--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tiles-count: 6
 # Social settings
 500px_url: 
 facebook_url: 
-github_url: 
+github_url: https://github.com/PalashTanejaPro
 gitlab_url: https://gitlab.com/u/andrewbanchich
 googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
 instagram_url: https://instagram.com
@@ -48,7 +48,7 @@ markdown: kramdown
 
 # Plugin: jekyll-seo-tag
 twitter:
-  username: andrewbanchich
+  username: PalashTaneja
 # Add one or more of the following
 facebook:
   app_id: 
