--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 title-bold: Codex
 title-normal: by Palash
 email: palashtanejapt@gmail.com
-description: <br /> and released under the Creative Commons.
+description: <br /> This is a place where tech enthusiasts interact.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: "https://andrewbanchich.gitlab.io" # the base hostname & protocol for your site
-author: 
+author: Palash Taneja
 street_address: 1234 Somewhere Road
 city: Nashville
 state: TN
