--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title-bold: Codex
+title-bold: Byte-Whiz
 title-normal: by Palash
 email: palashtanejapt@gmail.com
 description: <br /> This is a place where tech enthusiasts interact.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: "https://andrewbanchich.gitlab.io" # the base hostname & protocol for your site
+url: "palashtanejapro.github.io" # the base hostname & protocol for your site
 author: Palash Taneja
 street_address: 1234 Somewhere Road
 city: Nashville
